--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   <body>
     <h1>server code</h1>
     <script src="app.js"></script>
+    <!-- <script src="exercise.js"></script> -->
+    <!-- <script src="asyncawait.js"></script> -->
   </body>
 </html>
